--- a/01 colour and culture/style.css
+++ b/01 colour and culture/style.css
@@ -7,7 +7,7 @@ header{
 	background-color: #99B0FE;
 }
 
-#black{
+/* #black{
 	background-color: black;
 	color: white;
 	padding: 0.5rem 1rem;
@@ -54,7 +54,7 @@ header{
 	background-color: plum;
 	padding: 0.5rem 1rem;
 	border-radius: 1.5rem;
-}
+} */
 
 footer{
 	background-color: #99B0FE;
