--- a/assets/common.css
+++ b/assets/common.css
@@ -10,6 +10,22 @@
 	font-size: 16px;
 }
 
+body{
+	margin: var(--margin);
+	font-family: var(--body-font-family);
+	font-size: 1.125rem;
+	line-height: 1.6;
+	background-color: var(--background-color);
+}
+
+h1{
+	font-family: var(--title-font-family);
+	font-weight: bold;
+	font-size: 4.5rem;
+	line-height: 4.5rem;
+}
+
+
 .navbar{
 	font-family: var(--title-font-family);
 	font-size: 1.25rem;
@@ -23,68 +39,42 @@
 	color: var(--background-color);
 }
 
-.nav-article{
-	display: flex;
-}
-
-/*nav-01*/
-#nav01{
-	padding-left: 2rem;
-}
-
-#nav02{
-	padding-left: 2rem;
-}
-
-/*nav-03*/
-#nav03{
-	padding-left: 1.8rem;
-}
-
-.navbar a:hover{
+.nav-item a:hover{
 	text-decoration: underline;
 }
 
-body{
-	margin: var(--margin);
+header{
+	font-family: var(--title-font-family);
+	border-bottom-right-radius: 1.5rem;
+	margin: -1.25rem;
+	margin-top: var(--margin);
+	padding: 10%;
+	z-index: 10;
+	position: relative;
+}
+
+header p{
 	font-family: var(--body-font-family);
-	font-size: 1.125rem;
+	font-size: 1.5rem;
+	font-weight: 450;
 	line-height: 2rem;
-	background-color: var(--background-color);
+	padding-top: 2rem;
 }
 
 section p{
 	padding-bottom: 1.5rem;
 }
 
-header{
-	font-family: var(--title-font-family);
-	border-bottom-right-radius:  1.5rem;
-	margin: -1.25rem;
-	margin-top: 1.25rem;
-	padding: 1.25em;
-	position: relative;
-	z-index: 10;
-}
 
-h1{
-	font-weight: bold;
-	font-size: 4.5rem;
-	line-height: 4.5rem;
-}
+
+
 
 #heading-number{
 	font-size: 5rem;
 	padding: 1.8rem 0 2rem 0;
 }
 
-header p{
-	font-family: var(--body-font-family);
-	font-weight: 450;
-	font-size: 1.5rem;
-	line-height: 2rem;
-	padding-top: 2rem;
-}
+
 
 .author-info p{
 	font-size: 1rem;
