--- a/assets/common.css
+++ b/assets/common.css
@@ -22,24 +22,41 @@ h1{
 	font-family: var(--title-font-family);
 	font-weight: bold;
 	font-size: 4.5rem;
-	line-height: 4.5rem;
+	line-height: 5rem;
 }
 
 
-.navbar{
+nav{
 	font-family: var(--title-font-family);
 	font-size: 1.25rem;
-	font-weight:bold;
-	list-style: none;
+	font-weight:600;
 	display: flex;
-	justify-content: space-between;
-	background-color: black;
+	justify-content: center;
+	/* position: sticky; */
+	z-index: 1000;
+	top:0;
+	background-color: white;
+	text-align: left;
 	margin: -1.25rem;
-	padding: 1rem 1.5rem; /* adjust side padding later */
-	color: var(--background-color);
+	padding: 1rem 1.5rem; /*adjust side padding later*/
 }
 
-.nav-item a:hover{
+nav ul{
+	list-style: none;
+	display:flex;
+}
+
+nav ul li{
+	margin: 0 18px;
+}
+
+nav a{
+	text-decoration: none;
+	padding: 10px;
+	text-align: left;
+}
+
+.nav a:hover{
 	text-decoration: underline;
 }
 
@@ -48,7 +65,7 @@ header{
 	border-bottom-right-radius: 1.5rem;
 	margin: -1.25rem;
 	margin-top: var(--margin);
-	padding: 10%;
+	padding: 2rem 1.25rem;
 	z-index: 10;
 	position: relative;
 }
@@ -65,15 +82,9 @@ section p{
 	padding-bottom: 1.5rem;
 }
 
-
-
-
-
 #heading-number{
-	font-size: 5rem;
-	padding: 1.8rem 0 2rem 0;
+	padding-bottom: 1.5rem;
 }
-
 
 
 .author-info p{
@@ -95,7 +106,7 @@ em{
 	margin-top: 1rem;
 	padding-top: 2.5rem;
 	position: sticky;
-	top: -1.8rem;
+	top: -1.6rem;
 	background-color: var(--background-color);
 }
 
@@ -115,7 +126,7 @@ h3{
 	font-family: var(--title-font-family);
 	font-size: 1.6rem;
 	font-weight: 500;
-	padding: 1.2rem 0;
+	padding: 1rem 0;
 	position: sticky;
 	top: 0;
 	background-color: var(--background-color);
@@ -140,24 +151,21 @@ footer{
 	bottom: 4.5vh;
 }
 
-@media (min-width: 1280px){
+@media (min-width: 768px){
 
-	.navbar{
-		padding: 1% 6%
+	nav{
+		justify-content: flex-start;
+		padding: 2% 3%;
 	}
 
-	header{	padding-left: 3%;}
+	header{	padding: 5%;}
 
-	h1{	padding-left: 3%;}
+	/* h1{	padding-left: 3%;} */
 
-	#heading-number{padding-left: 3%;}
-
-	.author-info p{	padding-left: 3%;}
-
-	#first-h2{padding-left: 3%;}
+	/* .author-info p{	padding-left: 3%;} */
 
 	header p{
-		padding-left: 3%;
+		/* padding-left: 3%; */
 		max-width: 62rem;
 	}
 
