--- a/landing.css
+++ b/landing.css
@@ -8,22 +8,18 @@
 	font-size: 16px;
 }
 
-.navbar{
-	display: none;
-}
-
 header{
 	margin-top:-1.25rem;
 }
 
 h1{
-	padding-top: 2.2rem;
+	padding-top: 2rem;
 }
 
-header h1:nth-child(2){
-	font-size: 2.8rem;
+/* header h1:nth-child(2){
+	font-size: 2.5rem;
 	line-height: 3.5rem;
-}
+} */
 
 header p{
 	font-size: 1.125rem;
