--- a/landing.css
+++ b/landing.css
@@ -30,7 +30,6 @@ header p{
 .bookshelf{
 	display:flex;
 	flex-direction: column;
-	gap: 1rem;
 	align-items: center;
 	justify-content: center;
 	padding: 2rem 0;
@@ -43,13 +42,19 @@ header p{
 	width: 100%;
 	height: 250px;
 	display: flex;
-	align-items: center;
 	position: relative;
 	overflow: hidden;
-	padding: 0 1.25rem;
+	padding: 2rem 1.25rem;
 	line-height: 3rem;
-	border-bottom-right-radius:  1.5rem;
+	/* border-bottom-right-radius: 1.5rem; */
 	color: black;
+}
+
+.book p:last-child{
+	position: absolute;
+	bottom: 1.25rem;
+	right: 1.25rem;
+	margin: 0;
 }
 
 .book:nth-child(1){
@@ -83,13 +88,12 @@ footer{
 	}
 
 	.bookshelf{
-		/* display:flex; */
+		display:flex;
 		flex-direction: row;
-		gap: 1.5rem;
 	}
 
 	.book{
-		height: 300px;
+		height: 350px;
 	}
 
 	.book:hover:nth-child(1){
