--- a/landing.css
+++ b/landing.css
@@ -4,27 +4,19 @@
 	--title-font-family: 'figtree';
 	--body-font-family: 'albert sans';
 	--margin: 1.25rem;
+	--accent-color: #e0e0e0;
 
 	font-size: 16px;
 }
 
 header{
-	margin-top:-1.25rem;
+	background-color: var(--accent-color);
 }
-
-h1{
-	padding-top: 2rem;
-}
-
-/* header h1:nth-child(2){
-	font-size: 2.5rem;
-	line-height: 3.5rem;
-} */
 
 header p{
 	font-size: 1.125rem;
 	line-height: 2rem;
-	padding-top: 2rem;
+	padding: 2rem 0;
 }
 
 .bookshelf{
@@ -51,8 +43,11 @@ header p{
 }
 
 .book p:last-child{
+	border: 1px solid black;
+	border-radius: 5rem;
+	padding: 1% 3%;
 	position: absolute;
-	bottom: 1.25rem;
+	bottom: 2rem;
 	right: 1.25rem;
 	margin: 0;
 }
@@ -73,6 +68,7 @@ footer{
 	font-family: var(--title-font-family);
 	font-size: 1.25rem;
 	margin: 2.5rem -1.25rem -1.25rem;
+	background-color: ;
 }
 
 @media(min-width: 768px){
