--- a/01 colour and culture/style.css
+++ b/01 colour and culture/style.css
@@ -1,16 +1,20 @@
 
+:root{
+	--accent-color: #ADBFFD;
+}
+
 header{
-	background-color: #99B0FE;
+	background-color: var(--accent-color);
 }
 
 footer{
-	background-color: #99B0FE;
+	background-color: var(--accent-color);
 }
 
 h2, h3{
-	color: #99B0FE;
+	color: var(--accent-color)
 }
 
 #top{
-	background-color: #99B0FE;
+	background-color: var(--accent-color);
 }
