--- a/03 everyday color theory/style.css
+++ b/03 everyday color theory/style.css
@@ -1,12 +1,20 @@
+:root{
+	--accent-color: FF6735;
+}
+
+nav ul li:nth-child(4){
+	background-color: var(--accent-color);
+	font-weight: bold;
+}
 
 header{
-	background-color: #CEC045;
+	background-color: var(--accent-color);
 }
 
 footer{
-	background-color: #CEC045;
+	background-color: var(--accent-color);
 }
 
 #top{
-	background-color: #CEC045;
+	background-color: var(--accent-color);
 }
