--- a/assets/common.css
+++ b/assets/common.css
@@ -23,6 +23,7 @@ h1{
 	font-weight: bold;
 	font-size: 4.5rem;
 	line-height: 5rem;
+	padding-bottom: 2rem;
 }
 
 
@@ -57,10 +58,6 @@ nav a{
 	text-align: left;
 }
 
-.nav a:hover{
-	text-decoration: underline;
-}
-
 header{
 	font-family: var(--title-font-family);
 	/* border-bottom-right-radius: 1.5rem; */
@@ -76,7 +73,7 @@ header p{
 	font-size: 1.5rem;
 	font-weight: 450;
 	line-height: 2rem;
-	padding-top: 2rem;
+	max-width: 90%;
 }
 
 section p{
@@ -93,7 +90,6 @@ section p{
 }
 
 .author-info{
-	padding-top: 2rem;
 	padding-bottom: 1rem;
 }
 
@@ -155,16 +151,49 @@ footer{
 		padding: 1% 3%;
 	}
 
+	nav ul li:nth-child(2) a:hover{
+		background-color: #adbffd;
+		/* border-radius: 50%; */
+		padding: .25rem .62rem;
+		font-weight: bold;
+	}
+
+	nav ul li:nth-child(3) a:hover{
+		background-color: #d0ff71;
+		padding: .25rem .62rem;
+		font-weight: bold;
+	}
+
+	nav ul li:nth-child(4) a:hover{
+		background-color: #ff6735;
+		padding: .25rem .62rem;
+		font-weight: bold;
+	}
+
+	.grid{
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 0 4rem;
+		align-items: center;
+	}
+
+	#heading-number,
+	.grid h1:nth-of-type(2),
+	.grid .author-info{
+		grid-column: 1/2;
+	}
+
+	.grid p{
+		grid-column: 2/3;
+		align-items: flex-start;
+		text-align: left;
+	}
+
 	header{	padding: 5%;}
 
 	/* h1{	padding-left: 3%;} */
 
 	/* .author-info p{	padding-left: 3%;} */
-
-	header p{
-		/* padding-left: 3%; */
-		max-width: 62rem;
-	}
 
 	h2{	padding-left: 3%;}
 
