--- a/01 colour and culture/style.css
+++ b/01 colour and culture/style.css
@@ -3,10 +3,12 @@
 	--accent-color: #ADBFFD;
 }
 
-nav ul li:nth-child(2){
+/* nav ul li:nth-child(2){
 	background-color: var(--accent-color);
+	border-radius: 50%;
+	padding: .4rem .2rem;
 	font-weight: bold;
-}
+} */
 
 header{
 	background-color: var(--accent-color);
