--- a/assets/common.css
+++ b/assets/common.css
@@ -148,25 +148,26 @@ footer{
 
 	nav{
 		justify-content: flex-start;
-		padding: 1% 3%;
 	}
 
 	nav ul li:nth-child(2) a:hover{
 		background-color: #adbffd;
-		/* border-radius: 50%; */
-		padding: .25rem .62rem;
+		border-radius: 50%;
+		padding: .52rem .62rem;
 		font-weight: bold;
 	}
 
 	nav ul li:nth-child(3) a:hover{
 		background-color: #d0ff71;
-		padding: .25rem .62rem;
+		border-radius: 50%;
+		padding: .62rem .62rem;
 		font-weight: bold;
 	}
 
 	nav ul li:nth-child(4) a:hover{
 		background-color: #ff6735;
-		padding: .25rem .62rem;
+		border-radius: 50%;
+		padding: .62rem .62rem;
 		font-weight: bold;
 	}
 
