--- a/assets/common.css
+++ b/assets/common.css
@@ -74,6 +74,7 @@ header p{
 	font-weight: 450;
 	line-height: 2rem;
 	max-width: 90%;
+	padding-bottom: 2rem;
 }
 
 section p{
@@ -148,6 +149,7 @@ footer{
 
 	nav{
 		justify-content: flex-start;
+		padding: 1% 2.8%;
 	}
 
 	nav ul li:nth-child(2) a:hover{
@@ -175,7 +177,7 @@ footer{
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		gap: 0 4rem;
-		align-items: center;
+		align-items: flex-start;
 	}
 
 	#heading-number,
@@ -190,11 +192,11 @@ footer{
 		text-align: left;
 	}
 
-	header{	padding: 5%;}
-
 	/* h1{	padding-left: 3%;} */
 
 	/* .author-info p{	padding-left: 3%;} */
+
+	header{	padding: 5%;}
 
 	h2{	padding-left: 3%;}
 
