bullet point and blockquote

--- a/02 gradients/style.css
+++ b/02 gradients/style.css
@@ -11,6 +11,10 @@ footer{
 	background-color: var(--accent-color);
 }
 
+.point{
+	color:var(--accent-color);
+}
+
 #top{
 	background-color: var(--accent-color);
 }
