--- a/03 everyday color theory/style.css
+++ b/03 everyday color theory/style.css
@@ -10,6 +10,10 @@ footer{
 	background-color: var(--accent-color);
 }
 
+.point{
+	color:var(--accent-color);
+}
+
 #top{
 	background-color: var(--accent-color);
 }
