--- a/assets/common.css
+++ b/assets/common.css
@@ -203,8 +203,17 @@ footer{
 	h3{	padding-left: 3%;}
 
 	section p{	
-		max-width: 62rem;
+		max-width: 46rem;
 		padding-left: 3%;
 	}
+
+	blockquote{
+		font-size: 1.5rem;
+		max-width: 46rem;
+		padding: 3% 5%;
+		color: #999999;
+	}
+
+
 
 }
