--- a/assets/common.css
+++ b/assets/common.css
@@ -126,6 +126,12 @@ h3{
 	top: 0;
 }
 
+blockquote{
+	font-size: 1.25rem;
+	padding: 2% 8% 5% 8%;
+	color: #999999;
+}
+
 
 footer{
 	font-family: var(--title-font-family);
@@ -210,8 +216,6 @@ footer{
 	blockquote{
 		font-size: 1.5rem;
 		max-width: 46rem;
-		padding: 3% 5%;
-		color: #999999;
 	}
 
 
