--- a/01 colour and culture/style.css
+++ b/01 colour and culture/style.css
@@ -3,6 +3,13 @@
 	--accent-color: #ADBFFD;
 }
 
+nav ul li:nth-child(2) a{
+	background-color: #adbffd;
+	border-radius: 50%;
+	padding: .52rem .62rem;
+	font-weight: bold;
+}
+
 header{
 	background-color: var(--accent-color);
 }
