--- a/02 gradients/style.css
+++ b/02 gradients/style.css
@@ -3,6 +3,13 @@
 	--accent-color: #D0FF71;
 }
 
+nav ul li:nth-child(3) a{
+	background-color: #d0ff71;
+	border-radius: 50%;
+	padding: .62rem .62rem;
+	font-weight: bold;
+}
+
 header{
 	background-color: var(--accent-color);
 }
