--- a/landing.css
+++ b/landing.css
@@ -13,7 +13,13 @@ body{
 	background-color: #ECEDEF;
 }
 
-h1{	line-height: 3.5rem;}
+header{
+	/* padding-top: 2rem; */
+}
+
+h1{
+	/* line-height: 3.5rem; */
+}
 
 .bookshelf{
 	display:flex;
