--- a/landing.css
+++ b/landing.css
@@ -24,24 +24,22 @@ h1{
 .bookshelf{
 	display:flex;
 	flex-direction: column;
-	gap:0.5rem;
+	/* gap:0.5rem; */
 	align-items: center;
 	justify-content: center;
-	padding-top: 4rem;
+	/* padding-top: 4rem; */
 }
 
 .book{
 	font-family: var(--title-font-family);
 	font-size: 2.2rem;
 	font-weight: bold;
+	aspect-ratio: 1/1;
 	width: 100%;
-	height: 250px;
 	display: flex;
 	position: relative;
-	overflow: hidden;
 	padding: 2rem 1.25rem;
 	line-height: 3rem;
-	/* border-bottom-right-radius: 1.5rem; */
 	color: black;
 }
 
@@ -91,10 +89,15 @@ footer{
 	.bookshelf{
 		display:flex;
 		flex-direction: row;
+		padding: 0 2%;
 	}
 
 	.book{
-		height: 350px;
+		transition: border-radius 0.4s ease-in-out, background-color 0.4s ease;
+	}
+
+	.book:hover{
+		border-radius: 50%;
 	}
 
 	.book:hover:nth-child(1){
