--- a/02 gradients/style.css
+++ b/02 gradients/style.css
@@ -1,10 +1,11 @@
 
 :root{
-	--accent-color: #D0FF71;
+	--accent-color: #d0ff71;
+	--darker-color:#89D244;
 }
 
 nav ul li:nth-child(3) a{
-	background-color: #d0ff71;
+	background-color: var(--accent-color);
 	border-radius: 50%;
 	padding: .62rem .62rem;
 	font-weight: bold;
@@ -18,8 +19,12 @@ footer{
 	background-color: var(--accent-color);
 }
 
+h2, h3{
+	color: var(--darker-color);
+} 
+
 .point{
-	color:#a5f55d;
+	color:var(--darker-color);
 }
 
 #top{
