--- a/03 everyday color theory/style.css
+++ b/03 everyday color theory/style.css
@@ -1,9 +1,11 @@
 :root{
-	--accent-color: FF6735;
+	--accent-color: #FF6735;
+	--darker-color:#ff4718;
+
 }
 
 nav ul li:nth-child(4) a{
-	background-color: #ff6735;
+	background-color: var(--accent-color);
 	border-radius: 50%;
 	padding: .62rem .62rem;
 	font-weight: bold;
@@ -17,8 +19,12 @@ footer{
 	background-color: var(--accent-color);
 }
 
+h2, h3{
+	color: var(--darker-color);
+} 
+
 .point{
-	color:#ff4718;
+	color:var(--darker-color);
 }
 
 #top{
