--- a/assets/common.css
+++ b/assets/common.css
@@ -112,8 +112,6 @@ h2{
 	font-weight: 600;
 	line-height: 2.4rem;
 	padding: 1.2rem 0 1.2rem 0;
-	position: sticky;
-	top: 0;
 }
 
 h3{
@@ -121,13 +119,11 @@ h3{
 	font-size: 1.6rem;
 	font-weight: 500;
 	padding: 1rem 0;
-	position: sticky;
-	top: 0;
 }
 
 blockquote{
 	font-size: 1.25rem;
-	padding: 2% 8% 6% 8%;
+	padding: 2% 7% 6% 7%;
 	color: #999999;
 }
 
@@ -136,7 +132,6 @@ footer{
 	font-family: var(--title-font-family);
 	font-size: 1.25rem;
 	font-weight: 450;
-	/* border-top-right-radius: 1.5rem; */
 	margin: 2.5rem -1.25rem -1.25rem;
 	padding: 2.5rem 1.25rem;
 	padding-left: 5%;
@@ -144,7 +139,7 @@ footer{
 
 #top{
 	padding: .5rem 1rem;
-	border-radius: 1.5rem;
+	border-radius: 50%;
 	position: fixed;
 	right: 4vw;
 	bottom: 4.5vh;
@@ -206,7 +201,6 @@ footer{
 	h3{	padding-left: 3%;}
 
 	section p{	
-		/* max-width: 46rem; */
 		max-width: 55%;
 		padding-left: 3%;
 	}
