--- a/landing.css
+++ b/landing.css
@@ -10,16 +10,14 @@
 }
 
 body{
-	background-color: #ECEDEF;
+	background-color: #F5F6F8;
 }
 
 .bookshelf{
 	display:flex;
 	flex-direction: column;
-	/* gap:0.5rem; */
 	align-items: center;
 	justify-content: center;
-	/* padding-top: 4rem; */
 }
 
 .book{
@@ -47,17 +45,14 @@ body{
 
 .book:nth-child(1){
 	background-color: #ADBFFD;
-	/* background: linear-gradient(90deg, #ffecd2, #fcb69f); */
 }
 
 .book:nth-child(2){
 	background-color: #D0FF71;
-	/* background: linear-gradient(135deg, #b2f2e5, #d6cbf9); */
 }
 
 .book:nth-child(3){
 	background-color: #FF6735;
-	/* background: linear-gradient(90deg, #ff595e, #ffca3a, #8ac926, #1982c4, #6a4c93); */
 }
 
 footer{
@@ -69,14 +64,6 @@ footer{
 @media(min-width: 768px){
 
 	header p{ max-width: 55%;}
-/* 
-	.grid-container{
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		gap: 4rem;
-		align-items: flex-start;
-		padding: 4rem 5% 1rem 5%;
-	} */
 
 	.bookshelf{
 		display:flex;
