--- a/assets/common.css
+++ b/assets/common.css
@@ -112,7 +112,7 @@ em{
 h2{
 	font-family: var(--title-font-family);
 	font-size: 2rem;
-	font-weight: 600;
+	font-weight: bold;
 	line-height: 2.4rem;
 	padding: 1.2rem 0 1.2rem 0;
 }
@@ -120,7 +120,7 @@ h2{
 h3{
 	font-family: var(--title-font-family);
 	font-size: 1.6rem;
-	font-weight: 500;
+	font-weight: bold;
 	padding: 1rem 0;
 }
 
