--- a/01 colour and culture/style.css
+++ b/01 colour and culture/style.css
@@ -30,3 +30,27 @@ h2, h3{
 #top{
 	background-color: var(--accent-color);
 }
+
+
+@media (min-width: 768px) {
+.column {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 2rem;
+
+}
+
+header{
+	grid-column: 1;
+	position: fixed;
+	width: 50%;
+	height:100%;
+}
+
+.article {
+	grid-column: 2;
+}
+
+footer{
+	margin-top: -0.3rem;
+}
