--- a/01 colour and culture/style.css
+++ b/01 colour and culture/style.css
@@ -15,9 +15,9 @@ header{
 	background-color: var(--accent-color);
 }
 
-footer{
+/* footer{
 	background-color: var(--accent-color);
-}
+} */
 
 h2, h3{
 	color: var(--darker-color);
@@ -53,4 +53,6 @@ header{
 
 footer{
 	margin-top: -0.3rem;
+}
+
 }
