--- a/02 gradients/style.css
+++ b/02 gradients/style.css
@@ -15,9 +15,9 @@ header{
 	background-color: var(--accent-color);
 }
 
-footer{
+/* footer{
 	background-color: var(--accent-color);
-}
+} */
 
 h2, h3{
 	color: var(--darker-color);
@@ -30,3 +30,29 @@ h2, h3{
 #top{
 	background-color: var(--accent-color);
 }
+
+
+@media (min-width: 768px) {
+	.column {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 2rem;
+	
+	}
+	
+	header{
+		grid-column: 1;
+		position: fixed;
+		width: 50%;
+		height:100%;
+	}
+	
+	.article {
+		grid-column: 2;
+	}
+	
+	footer{
+		margin-top: -0.3rem;
+	}
+	
+	}
