--- a/landing.css
+++ b/landing.css
@@ -9,12 +9,20 @@
 	font-size: 16px;
 }
 
-nav ul li:nth-child(1) a{
-	font-weight: bold;
+nav{
+	display:none;
 }
+
+/* nav ul li:nth-child(1) a{
+	font-weight: bold;
+} */
 
 body{
 	background-color: #F5F6F8;
+}
+
+div{
+	margin:-1.25rem;
 }
 
 .bookshelf{
@@ -22,17 +30,20 @@ body{
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+
 }
 
 .book{
 	font-family: var(--title-font-family);
-	font-size: 2.2rem;
+	font-size: 2.5rem;
 	font-weight: bold;
 	aspect-ratio: 1/1;
 	width: 100%;
 	display: flex;
 	position: relative;
-	padding: 2rem 1.25rem;
+	/* padding: 2rem 1.25rem; */
+	padding: 3rem;
+
 	line-height: 3rem;
 	color: black;
 }
@@ -41,10 +52,12 @@ body{
 	border: 1px solid black;
 	border-radius: 5rem;
 	padding: 1% 3%;
+
 	position: absolute;
 	bottom: 2rem;
 	right: 1.25rem;
-	margin: 0;
+	/* margin: 0; */
+	margin: 1.5rem 2rem;
 }
 
 .book:nth-child(1){
@@ -63,6 +76,8 @@ footer{
 	font-family: var(--title-font-family);
 	font-size: 1.25rem;
 	margin: 2.5rem -1.25rem -1.25rem;
+
+	/* margin-top: -0.3rem; */
 }
 
 @media(min-width: 768px){
@@ -72,7 +87,7 @@ footer{
 	.bookshelf{
 		display:flex;
 		flex-direction: row;
-		padding: 0 2%;
+		/* padding: 0 2%; */
 	}
 
 	.book{
